[package]
name = "containerd-shim-youki-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/youki-wasmedge-executor",
    "crates/youki-wasmer-executor",
    "crates/youki-wasmtime-executor",
    "crates/youki-wazero-executor",
    "crates/youki-wasm3-executor",
    "crates/youki-wamr-executor",
]

[dependencies]
anyhow = "1"
serde = "1.0"
serde_json = "1.0"
chrono = "~0.4"
clap = { version = "4.1", features = ["derive", "env"] }
containerd-shim = {workspace = true}
containerd-shim-wasm = {workspace = true}
libcontainer = { git = "https://github.com/containers/youki"}
log = {workspace = true}
nix = {workspace = true}
libc = {workspace = true}

youki-wasmedge-executor = {version = "0.1.0", path = "crates/youki-wasmedge-executor"}
youki-wasmer-executor = {version = "0.1.0", path = "crates/youki-wasmer-executor"}
youki-wasmtime-executor = {version = "0.1.0", path = "crates/youki-wasmtime-executor"}
youki-wazero-executor = {version = "0.1.0", path = "crates/youki-wazero-executor"}
youki-wasm3-executor = {version = "0.1.0", path = "crates/youki-wasm3-executor"}
youki-wamr-executor = {version = "0.1.0", path = "crates/youki-wamr-executor"}

[workspace.dependencies]
containerd-shim = {git = "https://github.com/containerd/rust-extensions", rev = "7f7e3117a6ecb49e5e3b48b4f457a4914d2f2b93" }
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi" }
libcontainer = { git = "https://github.com/containers/youki"}
tracing = { version = "0.1.37", features = ["attributes"]}
oci-spec = { version = "~0.6.2", features = ["runtime"] }
nix = "0.26"
libc = "0.2.147"
log = "~0.4"
