[package]
name = "youki-wasm3-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-shim = { workspace = true }
containerd-shim-wasm = { workspace = true }
libcontainer = { workspace = true }
log = { workspace = true }
oci-spec = { workspace = true }
wasm3 = {git = "https://github.com/0xE282B0/wasm3-rs"}
